# pybasicbayes

./: .gitignore  pdm_build.py  pyproject.toml
pybasicbayes/distributions/: gaussian.py  negativebinomial.py
pybasicbayes/testing/: mixins.py
pybasicbayes/util/: general.py  stats.py
